# commutator-display-manager

./: README.md  meson.build
src/: Commutator.h  CommutatorIdfmLineReports.cpp  CommutatorIdfmLineReports.h  CommutatorSytadin.cpp  CommutatorSytadin.h  CommutatorVigicrues.cpp  CommutatorVigicrues.h  Display.h  IdfmLineStatus.cpp  IdfmLineStatus.h  IdfmTransportMode.cpp  IdfmTransportMode.h  Supervisor.cpp  Supervisor.h  Widget.cpp  Widget.h  WidgetIdfmLineReports.cpp  WidgetIdfmLineReports.h  WidgetSytadin.cpp  WidgetSytadin.h  WidgetVigicrues.cpp  WidgetVigicrues.h  main.cpp
